# roughup

./: .gitignore  .roughup_context_history  02_extract_pipeline.txt  03_symbols_pipeline.txt  05_tree_and_walk.txt  06_infra_hotpaths.txt  BugHunting.md  CLAUDE.md  Cargo.toml  Code.md  LICENSE  ModelWorkflowReviews.md  README.md  ROUGHUP_CLAUDE_GUIDE.md  Readme.md  RoughupContext.md  Status.md  TODO.md  TODO_CONTEXT.md  diff.rs  roughup.toml  rust-toolchain.toml  rustfmt.toml  script.sh  symbols.jsonl
.docs/: 2025-08-14-assessment.txt  CLAUDE.md  MENTOR_CONSULTATION.md  MentorAdvice.md  OPUS_GUIDANCE.md  PROJECT_ANALYSIS_REPORT.md  REVIEW_DOCUMENT.md  ROADMAP.md  TODO.md  Value_Assesment.md  edit_bootstrap.txt  extracted_source.txt  test_edit_spec.txt
.docs/review/: roughup_review.md
artifacts/: 08_tests_newline_index.txt
artifacts/chunks/02_extract_pipeline/: chunk_001.txt  chunk_002.txt  chunks_manifest.jsonl
artifacts/chunks/03_symbols_pipeline/: chunk_001.txt
artifacts/chunks/04_chunking_gpt/: chunk_001.txt
artifacts/chunks/06_infra_hotpaths/: chunks_manifest.jsonl
artifacts/chunks/07_config_and_docs/: chunk_001.txt
chunks/01_control_cli/: chunk_001.txt  chunks_manifest.jsonl
chunks/03_symbols_pipeline/: chunk_002.txt  chunk_003.txt  chunks_manifest.jsonl
chunks/04_chunking_gpt/: chunks_manifest.jsonl
chunks/05_tree_and_walk/: chunk_001.txt  chunk_002.txt  chunks_manifest.jsonl
chunks/06_infra_hotpaths/: chunk_001.txt  chunk_002.txt
chunks/07_config_and_docs/: chunks_manifest.jsonl
chunks/08_tests_newline_index/: chunks_manifest.jsonl
fixtures/: fixture_plan.example.json
src/: cli.rs  completion.rs  lib.rs  main.rs
src/anchor/: detect.rs
src/cli_ext/: anchor_cmd.rs
src/core/: apply_engine.rs  backup.rs  backup_ops.rs  budgeter.rs  chunk.rs  conflict.rs  context.rs  edit.rs  fail_signal.rs  git.rs  patch.rs  resolve.rs  symbol_index.rs  symbols.rs  tree.rs
src/core/extract/: mod.rs  target.rs
src/core/graphviz/: Roadmap.md  context_flow.dot
src/infra/: config.rs  io.rs  line_index.rs  utils.rs  walk.rs
src/parsers/: python_parser.rs  rust_parser.rs
tests/: anchor_why.rs  backup_restore_cleanup.rs  call_distance.rs  cli.rs  context_bucket_local.rs  context_buckets.rs  context_budget.rs  context_callgraph.rs  context_dedupe.rs  context_json_parity.rs  context_matrix.rs  context_ngrams.rs  context_novelty.rs  context_ranking.rs  context_smoke.rs  context_template.rs  context_tier.rs  integration_backup_list_show.rs  integration_backup_sessions.rs  line_index_tests.rs  ranking_fail_signal.rs  scoreboard_smoke.rs  util.rs
tests/fixtures/: callgraph.rs  crlf.rs  impl_trait.rs  multiline_sig.rs
